--- a/nebartiServices/webServices/pom.xml
+++ b/nebartiServices/webServices/pom.xml
@@ -23,30 +23,6 @@
             </plugin>
         </plugins>
     </build>
-    <profiles>
-        <profile>
-            <id>netbeans-private-testng</id>
-            <activation>
-                <property>
-                    <name>netbeans.testng.action</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.8.1</version>
-                        <configuration>
-                            <suiteXmlFiles>
-                                <suiteXmlFile>target/nb-private/testng-suite.xml</suiteXmlFile>
-                            </suiteXmlFiles>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
     <dependencies>
         <!-- Jersey -->
         <dependency>
@@ -179,7 +155,7 @@
         
     <properties>
         <jersey-version>1.11</jersey-version>
-        <spring-framework-version>3.1.1.RELEASE</spring-framework-version>
+        <spring-framework-version>[4.3.17,)</spring-framework-version>
         <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
     </properties>
     <repositories>
