--- a/nebartiServices/DataAccess/pom.xml
+++ b/nebartiServices/DataAccess/pom.xml
@@ -10,33 +10,10 @@
 
     <name>DataAccess</name>
     <url>http://maven.apache.org</url>
-    <profiles>
-        <profile>
-            <id>netbeans-private-testng</id>
-            <activation>
-                <property>
-                    <name>netbeans.testng.action</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.14.1</version>
-                        <configuration>
-                            <suiteXmlFiles>
-                                <suiteXmlFile>target/nb-private/testng-suite.xml</suiteXmlFile>
-                            </suiteXmlFiles>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-framework-version>3.2.2.RELEASE</spring-framework-version>
+        <spring-framework-version>[4.3.17,)</spring-framework-version>
     </properties>
 
     <dependencies>
