--- a/nebartiServices/dataIngest/pom.xml
+++ b/nebartiServices/dataIngest/pom.xml
@@ -26,31 +26,6 @@
             </plugin>
         </plugins>
     </build>
-    <profiles>
-        <profile>
-            <id>netbeans-private-testng</id>
-            <activation>
-                <property>
-                    <name>netbeans.testng.action</name>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.14.1</version>
-                        <configuration>
-                            <suiteXmlFiles>
-                                <suiteXmlFile>target/nb-private/testng-suite.xml</suiteXmlFile>
-                            </suiteXmlFiles>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-    
     <dependencies>
         <!-- Spring framework -->
         <dependency>
@@ -82,7 +57,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.3-beta1</version>
+            <version>4.5.6</version>
         </dependency>
         
         <dependency>
@@ -176,7 +151,7 @@
     <properties>
         <jersey-version>1.17.1</jersey-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-framework-version>3.2.2.RELEASE</spring-framework-version>
+        <spring-framework-version>[4.3.17,)</spring-framework-version>
     </properties>
     
     <repositories>
